--- a/htmls/Principal.html
+++ b/htmls/Principal.html
@@ -121,7 +121,7 @@
     <header
         class="sticky top-0 z-30 w-full bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-md border-b border-primary/10">
         <div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
-            <div class="flex items-center gap-12"> <a class="flex items-center gap-2 group" href="index.html"> <span
+            <div class="flex items-center gap-12"> <a class="flex items-center gap-2 group" href="#"> <span
                         class="material-symbols-outlined text-primary text-3xl transition-transform group-hover:scale-110">layers</span>
                     <h1 class="text-xl font-extrabold tracking-tighter text-slate-900 dark:text-white">MONTRE MAKEUP
                     </h1>
@@ -131,7 +131,7 @@
                 <!-- Menú Desktop -->
                 <nav class="hidden md:flex items-center gap-8"> <a
                         class="text-sm font-semibold hover:text-primary transition-colors uppercase tracking-widest"
-                        href="tienda.html">Tienda</a> <a
+                        href="/htmls/tienda.html">Tienda</a> <a
                         class="text-sm font-semibold hover:text-primary transition-colors uppercase tracking-widest"
                         href="#Collection">Colecciones</a> <a
                         class="text-sm font-semibold hover:text-primary transition-colors uppercase tracking-widest"
@@ -153,7 +153,7 @@
                     <span class="material-symbols-outlined">favorite</span>
                 </button>
                 <button class="p-2 hover:bg-primary/10 rounded-full transition-colors relative">
-                    <span class="material-symbols-outlined">shopping_bag</span>
+                    <span class="material-symbols-outlined"><a href="/htmls/carrito.html">shopping_bag</a></span>
                     <span class="absolute top-1 right-1 w-2 h-2 bg-primary rounded-full"></span>
                 </button>
                 <div class="w-10 h-10 rounded-full bg-cover bg-center border-2 border-primary/20"
