--- a/htmls/carrito.html
+++ b/htmls/carrito.html
@@ -42,11 +42,12 @@
             <header
                 class="flex items-center justify-between whitespace-nowrap border-b border-slate-200 dark:border-slate-800 bg-white/80 dark:bg-background-dark/80 backdrop-blur-md px-6 py-4 lg:px-20 sticky top-0 z-50">
                 <div class="flex items-center gap-8">
-                    <div class="flex items-center gap-3 text-primary">
-                        <span class="material-symbols-outlined text-4xl">flare</span>
-                        <h2
-                            class="text-slate-900 dark:text-slate-100 text-xl font-extrabold leading-tight tracking-tight">
-                            Montre Makeup</h2>
+                    <div class="flex items-center gap-3 text-primary">                        
+                        <a class="flex items-center gap-2 group" href="/htmls/Principal.html"> <span
+                        class="material-symbols-outlined text-primary text-3xl transition-transform group-hover:scale-110">layers</span>
+                    <h1 class="text-xl font-extrabold tracking-tighter text-slate-900 dark:text-white">MONTRE MAKEUP
+                    </h1>
+                </a>
                     </div>
                     <nav class="hidden md:flex items-center gap-6">
                         <a class="text-slate-600 dark:text-slate-400 text-sm font-semibold hover:text-primary transition-colors"
