--- a/htmls/Principal.html
+++ b/htmls/Principal.html
@@ -131,7 +131,7 @@
                 <!-- Menú Desktop -->
                 <nav class="hidden md:flex items-center gap-8"> <a
                         class="text-sm font-semibold hover:text-primary transition-colors uppercase tracking-widest"
-                        href="/htmls/tienda.html">Tienda</a> <a
+                        href="tienda.html">Tienda</a> <a
                         class="text-sm font-semibold hover:text-primary transition-colors uppercase tracking-widest"
                         href="#Collection">Colecciones</a> <a
                         class="text-sm font-semibold hover:text-primary transition-colors uppercase tracking-widest"
@@ -153,7 +153,7 @@
                     <span class="material-symbols-outlined">favorite</span>
                 </button>
                 <button class="p-2 hover:bg-primary/10 rounded-full transition-colors relative">
-                    <span class="material-symbols-outlined"><a href="/htmls/carrito.html">shopping_bag</a></span>
+                    <span class="material-symbols-outlined"><a href="carrito.html">shopping_bag</a></span>
                     <span class="absolute top-1 right-1 w-2 h-2 bg-primary rounded-full"></span>
                 </button>
                 <div class="w-10 h-10 rounded-full bg-cover bg-center border-2 border-primary/20"
