--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <button
                     class="w-full bg-primary hover:bg-primary/90 text-white font-bold py-4 rounded-full shadow-lg shadow-primary/25 transform active:scale-[0.98] transition-all flex items-center justify-center gap-2 mt-4"
                     type="submit">
-                    <a href="/htmls/Principal.html">Iniciar Sesión</a>
+                    <a href="htmls/Principal.html">Iniciar Sesión</a>
                     <span class="material-symbols-outlined text-xl">arrow_forward</span>
                 </button>
             </form>
