--- a/htmls/Principal.html
+++ b/htmls/Principal.html
@@ -152,10 +152,11 @@
                 <button class="p-2 hover:bg-primary/10 rounded-full transition-colors relative">
                     <span class="material-symbols-outlined">favorite</span>
                 </button>
-                <button class="p-2 hover:bg-primary/10 rounded-full transition-colors relative">
-                    <span class="material-symbols-outlined"><a href="carrito.html">shopping_bag</a></span>
-                    <span class="absolute top-1 right-1 w-2 h-2 bg-primary rounded-full"></span>
-                </button>
+                <span class="material-symbols-outlined"><a
+                        class="p-2 hover:bg-primary/10 rounded-full transition-colors relative"
+                        href="carrito.html">shopping_bag</a></span>
+                <span class="absolute top-1 right-1 w-2 h-2 bg-primary rounded-full"></span>
+
                 <div class="w-10 h-10 rounded-full bg-cover bg-center border-2 border-primary/20"
                     data-alt="User profile avatar portrait"
                     style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuA3_EMhoZ9XDnUQfeTvxjhxSG_p8STvczvyVfsdXkkUymbgTaQJqpVgHc3dlzfRrCH14FSwntxwk3pr0KuX_r37zQ56thJq30RbC2TdvcTin1-6ZJpev96ndurgQYwfcM9paW2urbCRqNvRw9fTpScfDrcDEUDcjbpxLIn9khDuHmvQEAuvXlcKNlY4ZksMpPKr6uHOvS7g_bS61thb-nEbZrR-qpXwkqoZ-6hNVOGcSeDQtzgdjuR2_Q2hODqXZNGRqSlwt34Kfg')">
@@ -189,7 +190,7 @@
                 </div>
                 <div class="hidden lg:block lg:w-1/2 bg-cover bg-center"
                     data-alt="High-end fashion model with glowing makeup and soft pink background"
-                    style="background-image: url('backround.png'); background-size: cover; background-position: center;">
+                    style="background-image: url('../backround.png'); background-size: cover; background-position: center;">
                 </div>
             </div>
             <div class="lg:hidden absolute inset-0 -z-10 opacity-30">
