--- a/htmls/tienda.html
+++ b/htmls/tienda.html
@@ -82,12 +82,11 @@
                     </div>
                     <button class="p-2 rounded-full hover:bg-primary/10 transition-colors relative">
                         <span class="material-symbols-outlined">favorite</span>
-                    </button>
-                    <button class="p-2 rounded-full hover:bg-primary/10 transition-colors relative">
-                        <span class="material-symbols-outlined"><a href="carrito.html">shopping_bag</a></span>
+                    </button>                     
+                        <span class="material-symbols-outlined"><a class="p-2 rounded-full hover:bg-primary/10 transition-colors relative" href="carrito.html">shopping_bag</a></span>
                         <span
                             class="absolute top-1 right-1 bg-primary text-white text-[10px] w-4 h-4 flex items-center justify-center rounded-full">3</span>
-                    </button>
+                    
                     <div class="w-10 h-10 rounded-full bg-primary/20 overflow-hidden border border-primary/30">
                         <img alt="Perfil de usuario" class="w-full h-full object-cover"
                             data-alt="Female user profile avatar minimalist"
