--- a/index.html
+++ b/index.html
@@ -131,12 +131,10 @@
                         iniciada</label>
                 </div>
                 <!-- Botón de Inicio de Sesión -->
-                <button
-                    class="w-full bg-primary hover:bg-primary/90 text-white font-bold py-4 rounded-full shadow-lg shadow-primary/25 transform active:scale-[0.98] transition-all flex items-center justify-center gap-2 mt-4"
-                    type="submit">
-                    <a href="htmls/Principal.html">Iniciar Sesión</a>
-                    <span class="material-symbols-outlined text-xl">arrow_forward</span>
-                </button>
+                <a class="w-full bg-primary hover:bg-primary/90 text-white font-bold py-4 rounded-full shadow-lg shadow-primary/25 transform active:scale-[0.98] transition-all flex items-center justify-center gap-2 mt-4"
+                    type="submit" href="htmls/Principal.html">Iniciar Sesión</a>
+                <span class="material-symbols-outlined text-xl">arrow_forward</span>
+
             </form>
             <!-- Social Login Divider -->
             <div class="relative my-10">
